# CardGameEngine

./: .gitignore  CMakeLists.txt  conandata.yml  engine.h  main.c  nuklear_include.h
assets/: background.atlas  background.tps  spritesheet.atlas  spritesheet.tps
src/: editor_ui.c  editor_ui.h  engine.c  engine.h  main.c  nuklear_glfw_gl4.h  nuklear_include.h  shl.c  texturepacker.c  texturepacker.h
